2010-10-15  Robert Larice
 * src/frontend/com_fft.c ,
 * src/frontend/com_fft.h ,
 * src/frontend/spec.c ,
 * src/frontend/spec.h :
    collect free_pnode_o() in "parse.h"

2010-10-15  Robert Larice
 * src/frontend/plotting/graphdb.c ,
 * src/frontend/plotting/graphdb.h ,
 * src/frontend/postcoms.c ,
 * src/frontend/wdisp/windisp.c ,
 * src/include/ftedbgra.h :
    collect NewGraph() FindGraph() CopyGraph() RemoveWindow() in "ftedbgra.h"

2010-10-15  Robert Larice
 * src/frontend/com_fft.c ,
 * src/frontend/outitf.c ,
 * src/frontend/rawfile.c ,
 * src/frontend/spec.c ,
 * src/frontend/vectors.c ,
 * src/include/ngspice.h ,
 * src/tclspice.c :
    collect datestring() and seconds() in "misc_time.h"

2010-10-15  Robert Larice
 * src/frontend/aspice.c ,
 * src/frontend/com_gnuplot.c ,
 * src/frontend/com_hardcopy.c ,
 * src/frontend/com_xgraph.c ,
 * src/frontend/inp.c ,
 * src/frontend/nutinp.c ,
 * src/include/ngspice.h ,
 * src/ngsconvert.c :
    collect smktemp() in "mktemp.h"

2010-10-13  Dietmar Warning
 * src/frontend/com_option.c: better formatting the output and
   add some useful parameters if command 'option' is given
 * src/include/cktdefs.h,
 * src/spicelib/analysis/cktdojob.c, cktntask.c,
 * src/spicelib/devices/cktinit.c,
 * src/spicelib/parser/inppas2.c:
   Reduction of trtol to 1 only if 'A' devices in the circuit and xspice is enabled

2010-10-09  Robert Larice
 * src/include/complex.h :
    !REVERT! remove typedef for _complex, which is used nowhere
    this breaks MSVC, currently unkown why, FIXME

2010-10-09  Robert Larice
 * src/frontend/parse-bison.c ,
 * src/frontend/parse-bison.h ,
 * src/spicelib/parser/inpptree-parser.c ,
 * src/spicelib/parser/inpptree-parser.h :
    update the bison generated files

2010-10-09  Robert Larice
 * src/frontend/parse-bison.y ,
 * src/spicelib/parser/inpptree-parser.y :
    avoid function redeclaration, PPparse() and PTparse()

2010-10-09  Robert Larice
 * src/frontend/define.c ,
 * src/frontend/evaluate.c ,